--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Namaste-Food</title>
+    <title>Tubeview</title>
     <link href="./index.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root">Not rendered</div>
+    <div id="root">Rendering......</div>
     <script type="module" src="./components/app.js"></script>
     
   </body>
