style-meta image

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tubeview</title>
+    
+    <link rel="icon" type="image/svg+xml" href="https://www.logo.wine/a/logo/YouTube/YouTube-Icon-Full-Color-Logo.wine.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TubeView</title>
     <link href="./index.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root">Rendering......</div>
+    <div id="root"></div>
     <script type="module" src="./components/app.js"></script>
     
   </body>
